--- a/presentation/src/main/res/layout/list_product_item.xml
+++ b/presentation/src/main/res/layout/list_product_item.xml
@@ -36,8 +36,11 @@
 
     <TextView
         android:id="@+id/list_product_name_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@color/md_theme_light_onSurface"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -50,8 +53,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:textColor="@color/md_theme_dark_secondaryContainer"
+        android:textColor="@color/md_theme_dark_onPrimary"
         android:textSize="8sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/list_product_price_text_view"
         app:layout_constraintTop_toBottomOf="@id/list_product_name_text_view"
@@ -62,8 +66,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:textColor="@color/md_theme_dark_secondaryContainer"
+        android:textColor="@color/md_theme_dark_onPrimary"
         android:textSize="8sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/list_product_rating_text_view"
         app:layout_constraintTop_toBottomOf="@id/list_product_name_text_view"
         tools:text="13 Answer" />
@@ -73,8 +78,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:textColor="@color/md_theme_dark_secondaryContainer"
+        android:textColor="@color/md_theme_dark_onPrimary"
         android:textSize="8sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/list_product_question_text_view"
         app:layout_constraintTop_toBottomOf="@id/list_product_name_text_view"
         tools:text="230 Comments" />
